--- a/lab1.qsf
+++ b/lab1.qsf
@@ -87,6 +87,20 @@ set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_NEAR_END_VMEAS "HALF VCCIO" -fall
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -rise
 set_global_assignment -name OUTPUT_IO_TIMING_FAR_END_VMEAS "HALF SIGNAL SWING" -fall
-set_location_assignment PIN_A7 -to bouton_export
-set_instance_assignment -name IO_STANDARD "3.3 V SCHMITT TRIGGER" -to bouton_export
+set_location_assignment PIN_C10 -to bouton_export[0]
+set_location_assignment PIN_C11 -to bouton_export[1]
+set_location_assignment PIN_D12 -to bouton_export[2]
+set_location_assignment PIN_C12 -to bouton_export[3]
+set_location_assignment PIN_A12 -to bouton_export[4]
+set_location_assignment PIN_B12 -to bouton_export[5]
+set_location_assignment PIN_A13 -to bouton_export[6]
+set_location_assignment PIN_A7 -to bouton_export[7]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to bouton_export[0]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to bouton_export[1]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to bouton_export[2]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to bouton_export[3]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to bouton_export[4]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to bouton_export[5]
+set_instance_assignment -name IO_STANDARD "3.3-V LVTTL" -to bouton_export[6]
+set_instance_assignment -name IO_STANDARD "3.3 V SCHMITT TRIGGER" -to bouton_export[7]
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
